test/pending/pos/t1380/hallo.scala
object hallo {
       def main(args:Array[String]) = println("hallo")    
}
