test/pending/neg/macro-invalidusage-badbounds-b/Impls_1.scala
import scala.reflect.macros.blackbox.Context

object Impls {
  def foo[U <: String](c: Context) = ???
}
